Reformatting code to meet internal code style